syntax = "proto3";
package relay.api;

import "message.proto";

//service definition.
service StreamInvokeService {
    rpc hitWords (HitWordRequest) returns (HitWordResponse);
}